CRM-2398: Add CC and BCC fields to email creation dialogue. - Fixed vertical align of "Cc" and "Bcc"

--- a/src/Oro/Bundle/EmailBundle/Resources/public/css/style.css
+++ b/src/Oro/Bundle/EmailBundle/Resources/public/css/style.css
@@ -66,7 +66,7 @@
 }
 #cc-bcc-holder {
     position: absolute;
-    top: 0;
+    top: 5px;
     right: 0;
 }
 #showCc, #showBcc {
